# msr-borg

./: .gitignore  CMakeLists.txt  README.md
borg/: analyze.ipynb  analyze.py  ff.npy  maxmin.py  maxweight.npy  msr-no-ff.npy  msr.npy  nmsr-alpha-0.9.npy  nmsr-alpha.npy  nmsr-no-ff.npy  nmsr.npy  optimizer.py  plot-all.py  plot-maxweight.py  plot-msr-no-ff.py  plot-msr.py  plot-nmsr-alpha.py  plot-nmsr-no-ff.py  plot-nmsr.py  plot-rt.py  plot.py  popular.csv  popular.npy  popular50.csv  popular50.npy  popularstats.csv  rtimer.npy  scale.py  simulate.py  test.npy
borg/scaled/: process.py
cmake/: FindGUROBI.cmake
include/: CMakeLists.txt  config.hpp  generation.hpp
src/: CMakeLists.txt  borg-maxweight.cpp  borg-msr-no-ff.cpp  borg-msr.cpp  borg-nmsr-no-ff.cpp  borg-nmsr.cpp  borg-rt.cpp  borg.cpp  ctmc.cpp  fcfs.cpp  first-fit.cpp  main.cpp  maxweight.cpp  rtimer.cpp  serverfilling.cpp
